spectec/test/elab/neg/parse-syntax-no-ids.t
  $ ./main.exe parse-syntax-no-ids.spectec 2>&1
  error[parse/syntax-no-ids]: empty syntax declaration
    --> parse-syntax-no-ids.spectec:3:1
    |
  3 | syntax
    | ^^^^^^
    = source: parse
  [1]
